tristris v0.1.0-alpha.2-0-g39dc35d

--- a/tristris/assets/data/config.json
+++ b/tristris/assets/data/config.json
@@ -75,15 +75,15 @@
   "input": {
     "contexts" : {
       "running" : {
-        "83": "tristris/audio/skipSong",
-        "77": "tristris/audio/toggleMusic",
-        "80": "tristris/game/togglePause",
-        "16": "tristris/player/hold",
-        "40": "tristris/player/moveDown",
-        "37": "tristris/player/moveLeft",
-        "39": "tristris/player/moveRight",
-        "38": "tristris/player/rotate",
-        "32": "tristris/player/slam"
+        "83": "audio/skipSong",
+        "77": "audio/toggleMusic",
+        "80": "game/togglePause",
+        "16": "player/hold",
+        "40": "player/moveDown",
+        "37": "player/moveLeft",
+        "39": "player/moveRight",
+        "38": "player/rotate",
+        "32": "player/slam"
       }
     }
   },
@@ -104,9 +104,9 @@
       "assets/audio/soundtrack/13.mp3"
     ],
     "eventEffectMap" : {
-      "tristris/arena/rowsCleared": "assets/audio/effects/264447__kickhat__open-button-2.wav",
-      "tristris/player/rotated" : "assets/audio/effects/73560__stanestane__blip.wav",
-      "tristris/player/slammed" : "assets/audio/effects/361636__josepharaoh99__8-bit-slam.wav"
+      "arena/rowsCleared": "assets/audio/effects/264447__kickhat__open-button-2.wav",
+      "player/rotated" : "assets/audio/effects/73560__stanestane__blip.wav",
+      "player/slammed" : "assets/audio/effects/361636__josepharaoh99__8-bit-slam.wav"
     }
   }
 }
