--- a/_config.yml
+++ b/_config.yml
@@ -55,12 +55,7 @@ defaults:
 extlinks:
   attributes: { target: _blank }
 
-scholar:
-  style: ieee-with-url
-  use_raw_bibtex_entry: true
-  bibliography_template: bib
-  bibliography_list_tag: table
-  bibliography_item_tag: tr
+iis_slider_array: []
 
 kramdown:
   input: GFM
@@ -68,7 +63,16 @@ kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
 
-iis_slider_array: []
+relative_links:
+  enabled: true
+  collections: true
+
+scholar:
+  style: ieee-with-url
+  use_raw_bibtex_entry: true
+  bibliography_template: bib
+  bibliography_list_tag: table
+  bibliography_item_tag: tr
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
